# SnaikeNET

./: .gitignore  README.md  fastapi_server_commands.py  main.py  player.py  pyproject.toml  server_commands.py  snakegameDEMO.py  uuid
.github/workflows/: run-tests.yaml
src/: fastapi_server_commands.py  main.py  parse_args.py
src/snaikenet/: __main__.py  fastapi_server_commands.py
src/snaikenet/game/: game.py  game_state.py  grid.py  player.py  prototype_game.py  types.py  visualize_gamestate.py
src/snaikenet/gnp/client/: app.py
src/snaikenet/gnp/server/: codec.py
src/snaikenet_client/: README.md  client_data.py  parse_args.py  types.py
src/snaikenet_client/client/: client.py  client_event_handler.py
src/snaikenet_demos/: client_demo.py  pygame_client_demo.py  server_demo.py
src/snaikenet_network/protocol/: protocol.py
src/snaikenet_network/server/: server.py
src/snaikenet_protocol/: protocol.py
src/snaikenet_rl_ameer/: client.py  reward.py  training.py
src/snaikenet_rl_devaansh/: __main__.py  agent.py  networks.py  ppo.py  preprocessing.py  reward.py  rollout_buffer.py
src/snaikenet_rl_jack/: __main__.py  agent.py  client.py  network.py  replay_buffer.py  reward.py  state.py
src/snaikenet_server/: __main__.py  fastapi_server_commands.py  parse_args.py  server_commands.py
src/snaikenet_server/game/: game.py  game_state.py  grid.py  list_dict.py  player.py  prototype_game.py  pygame_renderer.py  types.py  visualize_gamestate.py
src/snaikenet_server/server/: connected_clients.py  server.py  server_event_handler.py
src/snake/: __init__.py  fastapi_server_commands.py  server_commands.py
src/snake/game/: game.py  player.py
src/snakenet/: __main__.py  fastapi_server_commands.py  parse_args.py  server_commands.py
src/snakenet/game/: game.py  game_state.py  grid.py  list_dict.py  player.py  prototype_game.py  types.py  visualize_gamestate.py
tests/: test_client.py  test_game.py  test_protocol.py  test_rl_devaansh.py  test_rl_jack.py  test_server_client.py
