[project]
name = "SnakeNet"
version = "0.1.0"
description = "A multiplayer snake game"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pygame-ce>=2.5.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "snakenet.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
