[project]
name = "SnaikeNET"
version = "0.1.0"
description = "A multiplayer snake game"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pygame-ce>=2.5.7",
    "ruff>=0.15.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "snaikenet.__main__:main"
visualize_gamestate = "snaikenet.game.visualize_gamestate:main"
prototype = "snaikenet.game.prototype_game:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
