[project]
name = "SnaikeNET"
version = "0.1.0"
description = "A multiplayer snake game"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pygame-ce>=2.5.7",
    "ruff>=0.15.5",
    "torch>=2.6.0",
    "torchrl>=0.11.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "snaikenet_server.__main__:run_main"
visualize_gamestate = "snaikenet_server.game.visualize_gamestate:main"
prototype = "snaikenet_server.game.prototype_game:main"
pygame_client_demo = "snaikenet_demos.pygame_client_demo:main"
rl-agent-devaansh = "snaikenet_rl_devaansh.__main__:main"
rl-agent-ameer = "snaikenet_rl_ameer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
